--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = GPT
 	url = git@github.com:jiangyuan1018/GPT.git
 	branch = main
+[submodule "B"]
+	path = B
+	url = https://github.com/Cliffest/BERT.git
